# ragleakguard-safe-qna-agent

./: .dockerignore  .env.template  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  agency.py  main.py  onboarding_config.py  onboarding_tool.py  pyproject.toml  requirements.txt  shared_instructions.md
.github/workflows/: tests.yml
demo/: synthetic_knowledge_base.md
rlg_common/: __init__.py  config.py  files.py  openai_store.py  stores.py  summary.py
safe_rag_agent/: __init__.py  instructions.md  safe_rag_agent.py
safe_rag_agent/tools/: SafeIngestDocument.py  ScanDocument.py  ScanKnowledgeBase.py  SearchKnowledgeBase.py
tests/: conftest.py  test_metadata_only.py  test_tools.py
